# rust-log4rs-template

./: cookiecutter.json
{{cookiecutter.package_name}}/: Cargo.toml  README.md  build.rs
{{cookiecutter.package_name}}/config/debug/: log4rs.yaml
{{cookiecutter.package_name}}/config/release/: log4rs.yaml
{{cookiecutter.package_name}}/config/test/: log4rs.yaml
{{cookiecutter.package_name}}/src/: main.rs
{{cookiecutter.package_name}}/tests/: test_lib.rs
