[package]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.package_version}}"
authors = ["{{cookiecutter.author_name}}<{{cookiecutter.author_email}}>"]
edition = "{{cookiecutter.edition}}"
description = "{{cookiecutter.package_description}}"

[dependencies]
log = "*"
log4rs = "0.11.0"
fs_extra = "*"

[build-dependencies]
fs_extra = "*"
